    artist.
23. For Linux builds, if system tray icon is null (becasue QIcon cannot find
    it) then add icon files manually.
24. Hide cover, HTTP stream, and top-level folder options under a 'Show All
    Options' button.
25. Allow local socket path to start with ~
26. Ensure consistent order when drag'n'drop from list views as per tree views.
27. Remove touch friendly setting from OSX builds - no touch screen Macs?

1.5.2
-----
 1. Fix Ubuntu Touch builds.
 2. When refreshing search menu, clear items first!
 3. Fix setting of cover when existing cover is embedded in music file.
 4. Fix OSX executable name for case-sensitive filesystems.
 5. Hide ratings widgets, etc, in tag editor for devices and Mopidy, etc.
 6. Use Control+Alt+Number as shortcut to toggle an output.
 7. Don't allow to set short-cuts for actions that are menus.
 8. Add high-dpi support to Linux and Windows Qt5.4 builds.
 9. When calculating ReplayGain, if peak value is less than 0.00001 then assume
    the calculation is invalid.
10. When parsing podcast RSS, if episode is marked as video (e.g. video/mp4) but
    the url ends in an audio extension then it is proably an audio podcast.
11. Correctly initialise seach category.
12. Fix potential crashes on refresh.
13. Fix duplicate notification when Cantata is started whilst playing, or when
    'Replace Play Queue' is used.
14. Only show output change notification if outputs menu was not previously
    empty.
15. Construct a new config object, rather than changing group, to avoid any
    race conditions.
16. If fading volume on stop, then reset volume just before stopping. Some
    outputs (e.g. pulse audio) only allow setting a volume whilst playing.
17. If 'url' entry is empty in 'enclosure' section of podcast RSS file, then
    use 'guid' text as url - if possible.
18. Fix copying of covers to UMS, etc, devices if song is transcoded.
19. Add an option for 64 bit non KDE linux builds to install helper apps to