@@ -62,8 +62,10 @@ else (WIN32 OR APPLE)
 endif (WIN32 OR APPLE)
 if (WIN32)
     set(USE_SYSTEM_MENU_ICON OFF)
+    option(ENABLE_TOUCH_SUPPORT "Enable option to make interface more touch-friendly" ON)
 else (WIN32)
     option(USE_SYSTEM_MENU_ICON "Use system menu icon" ON)
+    option(ENABLE_TOUCH_SUPPORT "Enable option to make interface more touch-friendly" OFF)
 endif (WIN32)
 option(ENABLE_CDPARANOIA "Enable CDParanoia libraries (required for AudioCD support)" ON)
 option(ENABLE_CDDB "Enable CDDB libraries (either this or MusicBrianz required for AudioCD support)" ON)
