@@ -951,6 +951,7 @@ Utils::Desktop Utils::currentDe()
     return Other;
 }
 
+#ifdef ENABLE_TOUCH_SUPPORT
 static bool isTouchFriendly=false;
 void Utils::setTouchFriendly(bool t)
 {
@@ -961,6 +962,7 @@ bool Utils::touchFriendly()
 {
     return isTouchFriendly;
 }
+#endif
 
 QPainterPath Utils::buildPath(const QRectF &r, double radius)
 {
